--- a/style.css
+++ b/style.css
@@ -23,28 +23,41 @@ header nav ul li a {
 }
 
 .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 1rem;
     padding: 1rem;
 }
 
-.gallery img {
+.gallery-item {
+    max-width: 500px; /* Maksymalna szerokość */
     width: 100%;
     height: auto;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    transition: transform 0.2s;
+    transition: transform 0.3s;
 }
 
-.gallery img:hover {
-    transform: scale(1.1);
+.gallery-item:hover {
+    transform: scale(1.05);
+}
+
+.gallery-item.small {
+    display: block;
+    width: 50%; /* Szerokość dla mniejszych obrazów */
+    margin: 0 auto;
 }
 
 .title {
     font-size: 2rem;
     margin: 1rem 0;
+    text-align: center;
 }
 
+.par {
+    text-align:center;
+}
 form {
     display: flex;
     flex-direction: column;
